apps/calibre/calibre-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: default
  labels:
    app: calibre-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
        - name: calibre-web
          image: lscr.io/linuxserver/calibre-web:0.6.26-ls369
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8083
              name: http
          volumeMounts:
            - mountPath: /config
              name: calibre-web-config
            - mountPath: /books
              name: calibre-library
              readOnly: false
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: calibre-web-config
          persistentVolumeClaim:
            claimName: calibre-web-config
        - name: calibre-library
          persistentVolumeClaim:
            claimName: calibre-library
