apps/calibre/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: default
spec:
  selector:
    matchLabels:
      app: calibre
  dependsOn:
    - name: audiobookshelf
  template:
    metadata:
      labels:
        app: calibre
    spec:
      containers:
        - name: calibre
          image: lscr.io/linuxserver/calibre-web:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: audiobookshelf-audiobooks-data
              mountPath: /books
            - name: calibre-config-data
              mountPath: /config
          ports:
            - name: http
              containerPort: 8083
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 0.5
