apps/calibre/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: calibre
  ports:
    - name: calibre
      protocol: TCP
      port: 80
      targetPort: 8083
